Fixed the header & navbar on mobile

--- a/src/styles/40k-10e.less
+++ b/src/styles/40k-10e.less
@@ -1497,6 +1497,9 @@
                   .value:nth-child(7) {
                     grid-area: column-7;
                   }
+                  .keyword:nth-child(8) {
+                    grid-area: column-8;
+                  }
 
                   .value {
                     color: black;
